--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -74,7 +74,7 @@
                     </a>
                 </div>
             </li>
-            <li class="nav-item dropdown" routerLinkActive="active" *ngIf="isAuthenticated() && !isReadOnly()">
+            <li class="nav-item dropdown" routerLinkActive="active" *ngIf="isAuthenticated() && !isReadOnly() && !isUnassignedOrDisabled">
                 <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true"
                     aria-expanded="false">
                     Report
@@ -102,13 +102,19 @@
 </nav>
 <nav class="navbar navbar-expand-xl  navbar-zybach logoPadding">
     <a routerLink="/" routerLinkActive="active" class="navbar-brand navbar-brand-primary nav-link"
-        *ngIf="!isAuthenticated() || isUnassigned()">
+        *ngIf="!isAuthenticated()">
         {{platformShortName()}}
     </a>
 
-    <div class="navbar-collapse collapse pt-2 pt-md-0" id="navbar2" *ngIf="isAuthenticated() && !isUnassigned()">
+    <div class="navbar-collapse collapse pt-2 pt-md-0" id="navbar2" *ngIf="isAuthenticated()">
         <ul class="navbar-nav">
-            <li class="nav-item dropdown dashboardItem" routerLinkActive="active" [ngClass]="{'currentPage': isDataProgramCurrentPage()}">
+            <li class="nav-item mapItem" [ngClass]="{'currentPage': isWaterLevelExplorerCurrentPage()}">
+                <a class="nav-link" routerLinkActive="active" routerLink="/water-level-explorer">
+                    <img src="/assets/main/nav/map.png" /> Water Level Explorer
+                </a>
+            </li>
+            <li class="nav-item dropdown dashboardItem" routerLinkActive="active" [ngClass]="{'currentPage': isDataProgramCurrentPage()}"
+                *ngIf="!isUnassigned()">
                 <a href="#" class="dropdown-toggle nav-link" role="button" data-toggle="dropdown" aria-haspopup="true"
                     aria-expanded="false">
                     <img src="/assets/main/nav/dashboard.png" />
@@ -129,13 +135,13 @@
                     </a>
                 </div>
             </li>
-            <li class="nav-item mapItem" [ngClass]="{'currentPage': isMapCurrentPage()}">
+            <li class="nav-item mapItem" [ngClass]="{'currentPage': isMapCurrentPage()}" *ngIf="!isUnassigned()">
                 <a class="nav-link" routerLinkActive="active" routerLink="/well-map">
                     <img src="/assets/main/nav/map.png" /> Well Map
                 </a>
             </li>
             <li class="nav-item dropdown chemigationItem" routerLinkActive="active" [ngClass]="{'currentPage': isChemigationCurrentPage()}"
-                *ngIf="!isReadOnly()">
+                *ngIf="!isReadOnly() && !isUnassigned()">
                 <a href="#" class="dropdown-toggle nav-link" role="button" data-toggle="dropdown" aria-haspopup="true"
                     aria-expanded="false">
                     <img src="/assets/main/nav/chemigation.png" />
@@ -156,7 +162,7 @@
                     </a>
                 </div>
             </li>
-            <li class="nav-item searchItem">
+            <li class="nav-item searchItem" *ngIf="!isUnassigned()">
                 <img src="/assets/main/nav/search.png">
                 <p-autoComplete #geoOptixSearch field="Name" placeholder="Search..." emptyMessage="No Results"
                     [(ngModel)]="text" [suggestions]="searchSuggestions" (completeMethod)="search($event)"
