Fixed sensor anomaly edit page & delete modal display by matching new anomaly dto structure.

--- a/Source/Zybach.Web/src/app/pages/sensor-anomaly-list/sensor-anomaly-list.component.html
+++ b/Source/Zybach.Web/src/app/pages/sensor-anomaly-list/sensor-anomaly-list.component.html
@@ -28,7 +28,7 @@
     </div>
     <div class="modal-body">
         <p>
-            You are about to delete the sensor anomaly reported for sensor {{sensorAnomalyToDelete.SensorName}} between 
+            You are about to delete the sensor anomaly reported for sensor <b>{{sensorAnomalyToDelete.Sensor.SensorName}}</b> between 
             {{sensorAnomalyToDelete.StartDate | date: 'shortDate':'UTC'}} and {{sensorAnomalyToDelete.EndDate | date: 'shortDate':'UTC'}}.<br><br>
             Are you sure you wish to proceed?
         </p>
