--- a/Source/Zybach.Web/src/app/pages/sensor-anomaly-edit/sensor-anomaly-edit.component.html
+++ b/Source/Zybach.Web/src/app/pages/sensor-anomaly-edit/sensor-anomaly-edit.component.html
@@ -18,7 +18,7 @@
                         <span class="font-weight-bold">Sensor Name</span>
                     </div>
                     <div class="col-sm-9">
-                        {{sensorAnomaly.SensorName}}
+                        {{sensorAnomaly.Sensor.SensorName}}
                     </div>
                 </div>
                 <div class="row mt-3">
@@ -26,7 +26,7 @@
                         <span class="font-weight-bold">Well Reg. #</span>
                     </div>
                     <div class="col-sm-9">
-                        {{sensorAnomaly.WellRegistrationID}}
+                        {{sensorAnomaly.Sensor.WellRegistrationID}}
                     </div>
                 </div>
                 <div class="row mt-3">
