--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -110,7 +110,7 @@
         <ul class="navbar-nav">
             <li class="nav-item mapItem" [ngClass]="{'currentPage': isWaterLevelExplorerCurrentPage()}">
                 <a class="nav-link" routerLinkActive="active" routerLink="/water-level-explorer">
-                    <img src="/assets/main/nav/map.png" /> Water Level Explorer
+                    <img src="/assets/main/nav/water-level-explorer.png" /> Water Level Explorer
                 </a>
             </li>
             <li class="nav-item dropdown dashboardItem" routerLinkActive="active" [ngClass]="{'currentPage': isDataProgramCurrentPage()}"
@@ -130,7 +130,7 @@
                     <a class="dropdown-item" routerLink="/sensor-status">
                         Sensor Status Map
                     </a>
-                    <a class="dropdown-item" routerLink="/sensor-anomalies">
+                    <a class="dropdown-item" routerLink="/sensor-anomalies" *ngIf="!isReadOnly()">
                         Sensor Anomaly Reports
                     </a>
                 </div>
