--- a/Source/Zybach.Web/src/app/pages/water-level-explorer/water-level-explorer.component.html
+++ b/Source/Zybach.Web/src/app/pages/water-level-explorer/water-level-explorer.component.html
@@ -41,29 +41,48 @@
                                         <p>Loading...</p>
                                     </div>
                                 </div>
-                                <div class="row mb-1 mt-2" *ngIf="!noTimeSeriesData">
-                                    <div class="input-group col-8">
-                                        <span class="font-weight-bold mt-1 mx-2">Date Range:</span>
-                                        <!-- input box -->
-                                        <input id="dateRangeInput" class="form-control" name="mydate" placeholder="Select a date" 
-                                            angular-mydatepicker #dp="angular-mydatepicker" 
-                                            [(ngModel)]="dateRange" [options]="myDpOptions"
-                                            (dateChanged)="onDateChanged($event)"/>
-                                    
-                                        <!-- toggle calendar button -->
-                                        <div class="input-group-append">
-                                        <button type="button" class="btn btn-secondary" (click)="dp.toggleCalendar()">
-                                            <i class="fa fa-calendar-o"></i>
-                                        </button>
+                                
+                                <div *ngIf="noTimeSeriesData; then noTimeSeriesTemplate else timeSeriesTemplate"></div>
+                                <ng-template #noTimeSeriesTemplate>
+                                    <div class="mt-2">
+                                        <em *ngIf="noTimeSeriesData">No time series data available for this sensor.</em>
+
+                                    </div>
+
+                                </ng-template>
+                                <ng-template #timeSeriesTemplate>
+                                    <div class="row mb-1 mt-2">
+                                        <div class="input-group col-6">
+                                            <span class="font-weight-bold mt-1 mx-2">Start Date:</span>
+                                            <div class="input-group">
+                                                <input class="form-control" name="d1"
+                                                ngbDatepicker #d1="ngbDatepicker"
+                                                placeholder="yyyy-mm-dd" (ngModelChange)="onStartDateChanged($event)"
+                                                [(ngModel)]="startDate" />
+                                                <div class="input-group-append">
+                                                    <button class="btn btn-zybach far fa-calendar input-group-append" (click)="d1.toggle()" type="button"></button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="input-group col-6">
+                                            <span class="font-weight-bold mt-1 mx-2">End Date:</span>
+                                            <!-- input box -->
+                                            <div class="input-group">
+                                                <input class="form-control" name="d2"
+                                                ngbDatepicker #d2="ngbDatepicker"
+                                                placeholder="yyyy-mm-dd" (ngModelChange)="onEndDateChanged($event)"
+                                                [(ngModel)]="endDate" />
+                                                <div class="input-group-append">
+                                                    <button class="btn btn-zybach far fa-calendar input-group-append" (click)="d2.toggle()" type="button"></button>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
-                                    <div class="col-4">
-                                        <button type="button" class="btn btn-zybach" (click)="useFullDateRange()">Use Full Date Range</button>
-                                    </div>
-                                </div>
-                                <div *ngIf="!noTimeSeriesData" #{{chartID}} id="{{chartID}}" style="width: 100%; min-height: 340px;"></div>
-                                <em *ngIf="!noTimeSeriesData">All data are displayed in Central Daylight Time</em>
-                                <em *ngIf="noTimeSeriesData">No time series data available for this sensor.</em>
+                                    <div *ngIf="!noTimeSeriesData" #{{chartID}} id="{{chartID}}" style="width: 100%; min-height: 340px;"></div>
+                                    <em *ngIf="!noTimeSeriesData">All data are displayed in Central Daylight Time</em>
+
+                                </ng-template>
+                                
                                 <div class="mt-2">
                                     <custom-rich-text [customRichTextTypeID]="disclaimerRichTextTypeID"></custom-rich-text>
                                 </div>
