--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-edit/chemigation-permit-edit.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-edit/chemigation-permit-edit.component.html
@@ -64,10 +64,13 @@
     
                             <div class="row col-6 mt-4">
                                 <div class="col-6 control-label text-right mb-2">
-                                    <label><strong>County: </strong></label>
+                                    <label class="required"><strong>County: </strong></label>
                                 </div>
                                 <div class="col-6 text-left mb-2">
-                                    {{chemigationPermit?.County.CountyDisplayName}}
+                                    <ng-select [(ngModel)]="model.CountyID"
+                                        [items]="counties" bindLabel="CountyDisplayName" bindValue="CountyID" 
+                                        placeholder="Choose One" name="CountyID" required>
+                                    </ng-select>
                                 </div>
                             
                             </div>
