fully removed binding of well map filter to well grid below it. Grid now simply shows all wells. first pass at quick-time filters on water level explorer page

--- a/Source/Zybach.Web/src/app/pages/water-level-explorer/water-level-explorer.component.html
+++ b/Source/Zybach.Web/src/app/pages/water-level-explorer/water-level-explorer.component.html
@@ -50,6 +50,19 @@
                                 </div>
                                 <ng-template #timeSeriesTemplate>
                                     <div class="row mb-1 mt-2">
+                                        <div class="col">
+                                            <button (click)="lastThirtyDays($event)" class="btn btn-zybach mr-2">
+                                                Last 30 Days
+                                            </button>
+                                            <button (click)="lastSixMonths($event)" class="btn btn-zybach mr-2">
+                                                6 Months
+                                            </button>
+                                            <button (click)="lastOneYear($event)" class="btn btn-zybach mr-2">
+                                                One Year
+                                            </button>
+                                        </div>
+                                    </div>
+                                    <div class="row mb-1 mt-2">
                                         <div class="input-group col-6">
                                             <span class="font-weight-bold mt-1 mx-2">Start Date:</span>
                                             <div class="input-group">
