add full range button

--- a/Source/Zybach.Web/src/app/pages/water-level-explorer/water-level-explorer.component.html
+++ b/Source/Zybach.Web/src/app/pages/water-level-explorer/water-level-explorer.component.html
@@ -60,6 +60,9 @@
                                             <button (click)="lastOneYear($event)" class="btn btn-zybach mr-2">
                                                 One Year
                                             </button>
+                                            <button (click)="fullDateRange($event)" class="btn btn-zybach mr-2">
+                                                Full Range
+                                            </button>
                                         </div>
                                     </div>
                                     <div class="row mb-1 mt-2">
