displaying AgHub Wells with Connected Electrical Meters instead of Wells with Electrical Usage Estimates

--- a/Source/Zybach.Web/src/app/pages/dashboard/dashboard.component.html
+++ b/Source/Zybach.Web/src/app/pages/dashboard/dashboard.component.html
@@ -63,8 +63,8 @@
                         <div class="col-12  col-sm-6">{{districtStatistics.NumberOfFlowMeters}}</div>
                         <div class="col-12  col-sm-6 label"><strong>Wells with Continuity Meters: </strong> </div>
                         <div class="col-12  col-sm-6">{{districtStatistics.NumberOfContinuityMeters}}</div>
-                        <div class="col-12  col-sm-6 label"><strong>Wells with Electrical Usage Estimates: </strong> </div>
-                        <div class="col-12  col-sm-6">{{districtStatistics.NumberOfElectricalUsageEstimates}}</div>
+                        <div class="col-12  col-sm-6 label"><strong>AgHub Wells with Connected Electrical Meters: </strong> </div>
+                        <div class="col-12  col-sm-6">{{districtStatistics.NumberOfAgHubWellsWithConnectedElectricalMeters}}</div>
                     </div>
                 </div>
             </div>
