--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -133,6 +133,9 @@
                     <a class="dropdown-item" routerLink="/sensor-anomalies" *ngIf="!isReadOnly()">
                         Sensor Anomaly Reports
                     </a>
+                    <a class="dropdown-item" routerLink="/irrigation-units">
+                        Irrigation Units
+                    </a>
                 </div>
             </li>
             <li class="nav-item mapItem" [ngClass]="{'currentPage': isMapCurrentPage()}" *ngIf="!isUnassigned()">
