--- a/Source/Zybach.Web/src/app/shared/components/well-overview-tab/well-overview-tab.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/well-overview-tab/well-overview-tab.component.html
@@ -22,7 +22,15 @@
                                 <div class="col-12 col-sm-6 label"><strong>In GeoOptix? </strong></div>
                                 <div class="col-12 col-sm-6">{{well.InGeoOptix ? "Yes" : "No"}}</div>
                                 <div class="col-12 col-sm-6 label"><strong>TPID: </strong></div>
-                                <div class="col-12 col-sm-6">{{well.WellTPID}}</div>
+                                <div class="col-12 col-sm-6">
+                                    <div *ngIf="well.AgHubIrrigationUnitID; then hasIU else noIU"></div>
+                                    <ng-template #hasIU>
+                                        <a routerLink="/irrigation-units/{{well.AgHubIrrigationUnitID}}">{{well.WellTPID}}</a>
+                                    </ng-template>
+                                    <ng-template #noIU>
+                                        <em>No Associated Irrigation Unit</em>
+                                    </ng-template>
+                                </div>
                                 <div class="col-12 col-sm-6 label"><strong>AgHub Registered User: </strong></div>
                                 <div class="col-12 col-sm-6">{{well.AgHubRegisteredUser}}</div>
                                 <div class="col-12 col-sm-6 label"><strong>Field Name: </strong></div>
