--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -51,6 +51,9 @@
                         Labels and Definitions
                     </a>
                     <div class="dropdown-divider"></div>
+                    <a routerLink="/openet-integration" class="dropdown-item">
+                        OpenET Integration
+                    </a>
                     <a routerLink="/robust-review-scenario" class="dropdown-item">
                         Robust Review Scenario
                     </a>
