--- a/Source/Zybach.Web/src/app/pages/irrigation-unit-detail/irrigation-unit-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/irrigation-unit-detail/irrigation-unit-detail.component.html
@@ -56,7 +56,21 @@
                     OpenET Data
                 </div>
                 <div class="card-body mb-3">
-                    <p><em>Coming Soon!</em></p>
+                    <div class="row">
+                        <div class="col">
+                            <button class="btn btn-secondary btn-md float-right m-2" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
+                            ngbTooltip="Download as CSV"><i class="fas fa-download"></i></button>
+                            <fresca-clear-grid-filters-button class="m-2 float-right" [grid]="openETDataGrid">
+                            </fresca-clear-grid-filters-button>
+                        </div> 
+                    </div>
+                    <div class="table-responsive">
+                        <ag-grid-angular #openETDataGrid style="width: 100%; height: 300px;" 
+                            class="ag-theme-balham"
+                            [columnDefs]="columnDefs" (firstDataRendered)="onFirstDataRendered($event)"
+                            [pagination]="true" [paginationPageSize]="10" [suppressMenuHide]="true">
+                        </ag-grid-angular>
+                    </div>
                 </div>
             </div>
 
