--- a/Source/Zybach.Web/src/app/pages/irrigation-unit-detail/irrigation-unit-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/irrigation-unit-detail/irrigation-unit-detail.component.html
@@ -56,21 +56,29 @@
                     OpenET Data
                 </div>
                 <div class="card-body mb-3">
-                    <div class="row">
-                        <div class="col">
-                            <button class="btn btn-secondary btn-md float-right m-2" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
-                            ngbTooltip="Download as CSV"><i class="fas fa-download"></i></button>
-                            <fresca-clear-grid-filters-button class="m-2 float-right" [grid]="openETDataGrid">
-                            </fresca-clear-grid-filters-button>
-                        </div> 
-                    </div>
-                    <div class="table-responsive">
-                        <ag-grid-angular #openETDataGrid style="width: 100%; height: 300px;" 
-                            class="ag-theme-balham"
-                            [columnDefs]="columnDefs" (firstDataRendered)="onFirstDataRendered($event)"
-                            [pagination]="true" [paginationPageSize]="10" [suppressMenuHide]="true">
-                        </ag-grid-angular>
-                    </div>
+                    <div *ngIf="openETData?.length > 0; then hasOpenETData else noOpenETData"></div>
+                    <ng-template #hasOpenETData>
+                        <div class="row">
+                            <div class="col">
+                                <button class="btn btn-secondary btn-md float-right m-2" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
+                                ngbTooltip="Download as CSV"><i class="fas fa-download"></i></button>
+                                <fresca-clear-grid-filters-button class="m-2 float-right" [grid]="openETDataGrid">
+                                </fresca-clear-grid-filters-button>
+                            </div> 
+                        </div>
+                        <div class="table-responsive">
+                            <ag-grid-angular #openETDataGrid style="width: 100%; height: 300px;" 
+                                class="ag-theme-balham" [rowData]="openETData"
+                                [columnDefs]="columnDefs" (firstDataRendered)="onFirstDataRendered($event)"
+                                [pagination]="true" [paginationPageSize]="10" [suppressMenuHide]="true">
+                            </ag-grid-angular>
+                        </div>
+                    </ng-template>
+                    <ng-template #noOpenETData>
+                        <p>
+                            <em>This Irrigation Unit has no available OpenET data at this time</em>
+                        </p>
+                    </ng-template>
                 </div>
             </div>
 
