--- a/Zybach.Web/src/app/shared/components/field-definition/field-definition.component.html
+++ b/Zybach.Web/src/app/shared/components/field-definition/field-definition.component.html
@@ -29,7 +29,7 @@
             <div *ngIf="!showEditButton()" [innerHtml]="fieldDefinition.FieldDefinitionValue"></div>
         </ng-container>
         <div *ngIf="isEditing">
-            <ckeditor [editor]="Editor" [(ngModel)]="editedContent" (ready)="ckEditorReady($event)" [config]="ckConfig">
+            <ckeditor [editor]="Editor" [(ngModel)]="editedContent">
             </ckeditor>
             <div style="float:right;">
                 <button type="button" class="btn btn-sm btn-zybach mt-1 mr-1 mb-1" (click)="saveEdit()">Save</button>
@@ -38,22 +38,32 @@
         </div>
     </ng-template>
     <ng-container *ngIf="showEditButton()">
-        <div class="d-inline-block" (mouseenter)="notEditingMouseEnter()" (mouseleave)="notEditingMouseLeave()">
+        <div class="d-inline-block">
             <span style="overflow:hidden; text-overflow:ellipsis">
-                {{getLabelText()}}
-                <i class="fas fa-question-circle small" style="cursor: help;" #p="ngbPopover" [ngbPopover]="popContent"
-                    [popoverTitle]="popTitle" triggers="manual" [autoClose]="false"
-                    popoverClass="popover-override" container="body">
+                {{labelTextWithoutLastWord}}
+                <span style="white-space:nowrap">
+                    {{labelTextLastWord}}
+                    <i class="fas fa-question-circle small" (mouseenter)="notEditingMouseEnter()" (mouseleave)="notEditingMouseLeave()" style="cursor: help;" #p="ngbPopover" [ngbPopover]="popContent"
+                    [popoverTitle]="popTitle" triggers="manual" [autoClose]="false" popoverClass="popover-override"
+                    container="body">
                 </i>
+                </span>
+                
             </span>
         </div>
     </ng-container>
     <ng-container *ngIf="!showEditButton()">
         <span>
-            {{getLabelText()}}
-            <i class="fas fa-question-circle small" style="cursor: help;" [ngbPopover]="popContent"  popoverClass="popover-override"
-                [popoverTitle]="fieldDefinition.FieldDefinitionType.FieldDefinitionTypeDisplayName" triggers="mouseenter:mouseleave" container="body">
+            {{labelTextWithoutLastWord}}
+            <span style="white-space:nowrap">
+                {{labelTextLastWord}}
+                <i class="fas fa-question-circle small" style="cursor: help;" [ngbPopover]="popContent"
+                popoverClass="popover-override"
+                [popoverTitle]="fieldDefinition.FieldDefinitionType.FieldDefinitionTypeDisplayName"
+                triggers="mouseenter:mouseleave" container="body">
             </i>
+            </span>
+            
         </span>
     </ng-container>
 </div>
